v0.0.1/modules/schema/pages/class/Pss2ST.adoc
= `Pss2ST`
:toclevels: 4


+++PTI microprocessor-based stabilizer type 1.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Pss2ST`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`Pss2ST`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Pss2ST {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



































ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




















Pss2ST -> ExcitationSystemDynamics: ExcitationSystemDynamics


Pss2ST -> RemoteInputSignal: RemoteInputSignal


Pss2ST -> DiagramObject: DiagramObjects


Pss2ST -> InstanceSet: InstanceSet


Pss2ST -> Name: Names


Pss2ST -> ChangeSetMember: PropertiesCIMDataObject


Pss2ST -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<inputSignal1Type,`inputSignal1Type`>>
| 0..1
| xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]
| +++Type of input signal #1 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower, generatorAcceleratingPower, busVoltage, or busVoltageDerivative - shall be different than Pss2ST.inputSignal2Type).  Typical value = rotorAngularFrequencyDeviation.+++

| <<inputSignal2Type,`inputSignal2Type`>>
| 0..1
| xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]
| +++Type of input signal #2 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower, generatorAcceleratingPower, busVoltage, or busVoltageDerivative - shall be different than Pss2ST.inputSignal1Type).  Typical value = busVoltageDerivative.+++

| <<k1,`k1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i><i><sub>1</sub></i>).+++

| <<k2,`k2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i><i><sub>2</sub></i>).+++

| <<lsmax,`lsmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>L</i><i><sub>SMAX</sub></i>) (&gt; Pss2ST.lsmin).+++

| <<lsmin,`lsmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>L</i><i><sub>SMIN</sub></i>) (&lt; Pss2ST.lsmax).+++

| <<t1,`t1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0).+++

| <<t10,`t10`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>10</sub></i>) (&gt;= 0).+++

| <<t2,`t2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>2</sub></i>) (&gt;= 0).+++

| <<t3,`t3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>3</sub></i>) (&gt;= 0).+++

| <<t4,`t4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>4</sub></i>) (&gt;= 0).+++

| <<t5,`t5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>5</sub></i>) (&gt;= 0).+++

| <<t6,`t6`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>6</sub></i>) (&gt;= 0).+++

| <<t7,`t7`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>7</sub></i>) (&gt;= 0).+++

| <<t8,`t8`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>8</sub></i>) (&gt;= 0).+++

| <<t9,`t9`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>9</sub></i>) (&gt;= 0).+++

| <<vcl,`vcl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Cutoff limiter (<i>V</i><i><sub>CL</sub></i>).+++

| <<vcu,`vcu`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Cutoff limiter (<i>V</i><i><sub>CU</sub></i>).+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..*
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#inputSignal1Type]
=== `inputSignal1Type`
+++Type of input signal #1 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower, generatorAcceleratingPower, busVoltage, or busVoltageDerivative - shall be different than Pss2ST.inputSignal2Type).  Typical value = rotorAngularFrequencyDeviation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.inputSignal1Type`
| Cardinality
| 0..1
| Type
| xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]


|===

//[discrete]
[#inputSignal2Type]
=== `inputSignal2Type`
+++Type of input signal #2 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower, generatorAcceleratingPower, busVoltage, or busVoltageDerivative - shall be different than Pss2ST.inputSignal1Type).  Typical value = busVoltageDerivative.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.inputSignal2Type`
| Cardinality
| 0..1
| Type
| xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#k1]
=== `k1`
+++Gain (<i>K</i><i><sub>1</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.k1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k2]
=== `k2`
+++Gain (<i>K</i><i><sub>2</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.k2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#lsmax]
=== `lsmax`
+++Limiter (<i>L</i><i><sub>SMAX</sub></i>) (&gt; Pss2ST.lsmin).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.lsmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#lsmin]
=== `lsmin`
+++Limiter (<i>L</i><i><sub>SMIN</sub></i>) (&lt; Pss2ST.lsmax).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.lsmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#t1]
=== `t1`
+++Time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t10]
=== `t10`
+++Time constant (<i>T</i><i><sub>10</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t2]
=== `t2`
+++Time constant (<i>T</i><i><sub>2</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t3]
=== `t3`
+++Time constant (<i>T</i><i><sub>3</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t4]
=== `t4`
+++Time constant (<i>T</i><i><sub>4</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t5]
=== `t5`
+++Time constant (<i>T</i><i><sub>5</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t6]
=== `t6`
+++Time constant (<i>T</i><i><sub>6</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t7]
=== `t7`
+++Time constant (<i>T</i><i><sub>7</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t8]
=== `t8`
+++Time constant (<i>T</i><i><sub>8</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t9]
=== `t9`
+++Time constant (<i>T</i><i><sub>9</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#vcl]
=== `vcl`
+++Cutoff limiter (<i>V</i><i><sub>CL</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.vcl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vcu]
=== `vcu`
+++Cutoff limiter (<i>V</i><i><sub>CU</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.vcu`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


