v1.1.0/modules/schema/pages/class/Pss2ST.adoc
= `Pss2ST`
:toclevels: 4


+++PTI microprocessor-based stabilizer type 1.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Pss2ST`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`Pss2ST`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<inputSignal1Type,`inputSignal1Type`>>
//| [[slots_table.inputSignal1Type]]<<inputSignal1Type,`inputSignal1Type`>>
| 0..1 +
xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]
| +++Type of input signal #1 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower,...+++
| _n/a_

| <<inputSignal2Type,`inputSignal2Type`>>
//| [[slots_table.inputSignal2Type]]<<inputSignal2Type,`inputSignal2Type`>>
| 0..1 +
xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]
| +++Type of input signal #2 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower,...+++
| _n/a_

| <<k1,`k1`>>
//| [[slots_table.k1]]<<k1,`k1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i><i><sub>1</sub></i>).+++
| _n/a_

| <<k2,`k2`>>
//| [[slots_table.k2]]<<k2,`k2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i><i><sub>2</sub></i>).+++
| _n/a_

| <<lsmax,`lsmax`>>
//| [[slots_table.lsmax]]<<lsmax,`lsmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>L</i><i><sub>SMAX</sub></i>) (&gt; Pss2ST.lsmin).+++
| _n/a_

| <<lsmin,`lsmin`>>
//| [[slots_table.lsmin]]<<lsmin,`lsmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>L</i><i><sub>SMIN</sub></i>) (&lt; Pss2ST.lsmax).+++
| _n/a_

| <<t1,`t1`>>
//| [[slots_table.t1]]<<t1,`t1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t10,`t10`>>
//| [[slots_table.t10]]<<t10,`t10`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>10</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t2,`t2`>>
//| [[slots_table.t2]]<<t2,`t2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>2</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t3,`t3`>>
//| [[slots_table.t3]]<<t3,`t3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>3</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t4,`t4`>>
//| [[slots_table.t4]]<<t4,`t4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>4</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t5,`t5`>>
//| [[slots_table.t5]]<<t5,`t5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>5</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t6,`t6`>>
//| [[slots_table.t6]]<<t6,`t6`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>6</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t7,`t7`>>
//| [[slots_table.t7]]<<t7,`t7`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>7</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t8,`t8`>>
//| [[slots_table.t8]]<<t8,`t8`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>8</sub></i>) (&gt;= 0).+++
| _n/a_

| <<t9,`t9`>>
//| [[slots_table.t9]]<<t9,`t9`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>9</sub></i>) (&gt;= 0).+++
| _n/a_

| <<vcl,`vcl`>>
//| [[slots_table.vcl]]<<vcl,`vcl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Cutoff limiter (<i>V</i><i><sub>CL</sub></i>).+++
| _n/a_

| <<vcu,`vcu`>>
//| [[slots_table.vcu]]<<vcu,`vcu`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Cutoff limiter (<i>V</i><i><sub>CU</sub></i>).+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..* +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#inputSignal1Type]
=== `inputSignal1Type`
+++Type of input signal #1 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower, generatorAcceleratingPower, busVoltage, or busVoltageDerivative - shall be different than Pss2ST.inputSignal2Type).  Typical value = rotorAngularFrequencyDeviation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.inputSignal1Type`
| Cardinality
| 0..1
| Type
| xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]


|===

////
[.text-left]
--
<<slots_table.inputSignal1Type,&#10548;>>
--
////


//[discrete]
[#inputSignal2Type]
=== `inputSignal2Type`
+++Type of input signal #2 (rotorAngularFrequencyDeviation, busFrequencyDeviation, generatorElectricalPower, generatorAcceleratingPower, busVoltage, or busVoltageDerivative - shall be different than Pss2ST.inputSignal1Type).  Typical value = busVoltageDerivative.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.inputSignal2Type`
| Cardinality
| 0..1
| Type
| xref::enumeration/InputSignalKind.adoc[`InputSignalKind`]


|===

////
[.text-left]
--
<<slots_table.inputSignal2Type,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k1]
=== `k1`
+++Gain (<i>K</i><i><sub>1</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.k1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k1,&#10548;>>
--
////


//[discrete]
[#k2]
=== `k2`
+++Gain (<i>K</i><i><sub>2</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.k2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k2,&#10548;>>
--
////


//[discrete]
[#lsmax]
=== `lsmax`
+++Limiter (<i>L</i><i><sub>SMAX</sub></i>) (&gt; Pss2ST.lsmin).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.lsmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lsmax,&#10548;>>
--
////


//[discrete]
[#lsmin]
=== `lsmin`
+++Limiter (<i>L</i><i><sub>SMIN</sub></i>) (&lt; Pss2ST.lsmax).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.lsmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lsmin,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#t1]
=== `t1`
+++Time constant (<i>T</i><i><sub>1</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1,&#10548;>>
--
////


//[discrete]
[#t10]
=== `t10`
+++Time constant (<i>T</i><i><sub>10</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t10,&#10548;>>
--
////


//[discrete]
[#t2]
=== `t2`
+++Time constant (<i>T</i><i><sub>2</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t2,&#10548;>>
--
////


//[discrete]
[#t3]
=== `t3`
+++Time constant (<i>T</i><i><sub>3</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3,&#10548;>>
--
////


//[discrete]
[#t4]
=== `t4`
+++Time constant (<i>T</i><i><sub>4</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4,&#10548;>>
--
////


//[discrete]
[#t5]
=== `t5`
+++Time constant (<i>T</i><i><sub>5</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5,&#10548;>>
--
////


//[discrete]
[#t6]
=== `t6`
+++Time constant (<i>T</i><i><sub>6</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t6,&#10548;>>
--
////


//[discrete]
[#t7]
=== `t7`
+++Time constant (<i>T</i><i><sub>7</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t7,&#10548;>>
--
////


//[discrete]
[#t8]
=== `t8`
+++Time constant (<i>T</i><i><sub>8</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t8,&#10548;>>
--
////


//[discrete]
[#t9]
=== `t9`
+++Time constant (<i>T</i><i><sub>9</sub></i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.t9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t9,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#vcl]
=== `vcl`
+++Cutoff limiter (<i>V</i><i><sub>CL</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.vcl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vcl,&#10548;>>
--
////


//[discrete]
[#vcu]
=== `vcu`
+++Cutoff limiter (<i>V</i><i><sub>CU</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pss2ST.vcu`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vcu,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
